[package]
name = "text_sharing_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
uuid = { version = "0.8.2", features = ["v4"] }
iron = "0.6.1"
staticfile = "*"
sha2 = "0.9.8"
hex = "0.3.1"
serde_json = "1.0"
handlebars = "3.0.1"
cookie = "0.15"
pulldown-cmark = "0.8.0"
ammonia = "3.1.2"
chrono = "0.4"